references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/EnumerationUsage_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:039be3d9cfb48da588dd4be53c1de55888df4ad2ebdcd0f01b4bfdabfc034b83
size 1818
